---
source: src/tests.rs
expression: "emit_diagnostic_str(& input, make_error_diagnostic(& err))"
---
error: Expected `;`.
  ┌─ "test_data/molt_grammar/syntax_error4.molt":1:35
  │
1 │ let field: Field = pub $ident: Lit,
  │                                   ^ Expected `;`.
